reorganize arrays script

--- a/books/data-structures/2.1.arrays.md
+++ b/books/data-structures/2.1.arrays.md
@@ -70,6 +70,9 @@ printf("Segundo item do array: %d\n", primes[1]);
 printf("Terceiro item do array: %d\n", primes[2]);
 printf("Quarto item do array: %d\n", primes[3]);
 ```
+#### Busca
+
+Para buscarmos um item em um array precisamos percorre-lo e comparar item a item.
 
 #### Definição
 
@@ -98,11 +101,110 @@ primes[3] = 23;
 
 #### Exclusao
 
-Exclusoes nao sao possíveis em arrays estáticos.
+Exclusoes nao sao possíveis em arrays estáticos. Uma vez que você definiu um array de 4 posições, como fizemos, ele vai
+ter 4 posições.
 
-#### Busca
+Podemos, naturalmente setar o valor de um índice como `0` ou `-1` no caso desse arry de primos. Essa abordagem, no entanto, essa abordagem deixa buracos.
+
+Idealmente você não quer ter esses buracos, o que faz com que você precise mover elementos, dependendo de onde o item removido se encontra.
+
+Em nosso array de primos, se removermos o item no índice 0, precisamos mover os elementos de índice 1, 2 e 3 para
+a esquerda.
+
+Para um controle melhor vamos ter uma variável size
+
+```c
+void delete_at(int index, int primes[], int *size);
+void print_array(int primes[], int *size);
+
+int main() {
+    int primes[] = {1, 2, 3, 5};
+    int capacity = 4;
+    int size = 4;
+
+    delete_at(0, primes, &size);
+    print_array(primes, size);
+
+    printf("Capcity: %d\nSize: %d\n", capacity, size);
+
+    return 0;
+}
+
+void print_array(int primes[], int size) {
+    for(int i = 0; i < size; i++) {
+        printf("primes[%d] is %d\n", i, primes[i]);
+    }
+}
+
+void delete_at(int index, int primes[], int *size) {
+    if (index < 0 || index > *size) {
+        fprintf(stderr, "Index out of bounds\n");
+        return;
+    }
+
+    for (int i = index; i < *size - 1; i++) {
+        primes[i] = primes[i + 1];
+    }
+
+    *(size)--;
+}
+```
+
+Isso faz com que tenhamos dois valores diferentes referentes a um array: capacidade e tamanho. Capacidade diz respeito
+a quantos items aquele array pode ter. Em nosso exemplo são quatro.
+
+Tamaho é diz respeito à quantidade de itens no array naquele momento.
+
+Em Go podemos encontrar isso em Slices com a definição de `length` e `capacity`.
+
+Nos tópicos avançados faremos algo um pouco mais dinamico com `malloc` e `free`. Mas isso já adiciona um dinamismo maior
+ao array, que é o nosso próximo tópico.
 
 ## Arrays Dinamicos
+
+Arrays dinâmicos são tal quais arrays estáticos, com a diferença de que não são estáticos.
+Em um array dinâmico, a quantidade de items é arbitrária.
+O array pode (virtualmente) crescer indefinidamente.
+
+As operações mostradas anteriormente são iguais em sua maioria. A mudança acontece na exclusão onde não precisamos nós
+mesmos lidar com o dinamismo dos itens.
+
+Ao deletar o array, ele se ajusta em si mesmo. Arrays dinamicos são largamente utilizados em linguagens mais de alto
+nível e de tipagem dinâmica como Ruby e JavaScript.
+
+```rb
+arr = [1, 2, 3, 5]
+
+arr.delete_at(0)
+
+# [2, 3, 5]
+```
+
+## Nota de eficiencia: como arrays dinamicos funcionam por debaixo dos panos?
+
+Os conceitos de `length` e `capacity` não necessariamente se aplicam aqui. Pelo menos não em Ruby que é a linguagem que
+utilizaremos. Isso fica a cargo da runtime que vai sim lidar com isso.
+
+#### Alocação inicial
+
+A alocação inicial de um array é feita com um tamanho definido. Em ruby, na versao em que estou, usando o módulo
+`objspace` o array vazio inicializa com 40bytes de memória alocados. Isso acontece por conta que um espaço mínimo
+precisa ser alocado.
+
+Na implementação do MRI, o endereço incialmente alocado para o array se mantém o mesmo. Internamente é feita uma
+realocação do array, aumentando seu tamanho. O endereço pode mudar, embora não tenha sido esse o caso. Podemos
+averiguara isso na quantidade de memória alocada.
+
+#### A medida que o array cresce
+
+Quanto mais items são adicionados ao array, mais memória é necessária. Quando está ficando sem espaço uma nova alocação
+maior em algum fator é feita para acomodar os itens do array. Essa nova alocação recebe todos os itens do espaço antigo.
+Uma cópia é feita.
+
+É difícil ver o endereço mudar, pelo menos nessa máquina. Mas é fácil de ver esse comportamento pela quantidade de
+memória alocada.
+
+## Topico avançado: Um dia na vida de um array dinâmico
 
 ----
 
@@ -236,3 +338,4 @@ https://itnext.io/v8-deep-dives-understanding-array-internals-5b17d7a28ecc - ent
 javascript
 https://embarcados.com.br/ponteiro-em-c-aritmetica-de-ponteiro/
 https://gist.github.com/totherik/3a4432f26eea1224ceeb
+https://ivoanjo.me/blog/2021/02/11/looking-into-array-memory-usage/
