add pitch on legacy code

--- a/books/data-structures/2.3.streams.md
+++ b/books/data-structures/2.3.streams.md
@@ -4,7 +4,17 @@ Streams sao arrays preguiçosos. Eles são uma forma de representar uma sequênc
 calculados. Eles são úteis para representar sequências infinitas, ou para representar sequências que são muito grandes
 para serem armazenadas em memória.
 
-Strems também são associadas com arquivos justamente por essa característica de processamento sob demanda.
+Streams também são associadas com arquivos justamente por essa característica de processamento sob demanda.
+
+## ADT Stream
+
+- `Stream.new(&block)`: Cria um novo stream a partir de um bloco que define a sequência de elementos.
+- `Stream.from_array(array)`: Cria um novo stream a partir de um array.
+- `stream.each(&block)`: Itera sobre os elementos do stream.
+- `stream.map(&block)`: Aplica uma função a cada elemento do stream.
+- `stream.filter(&block)`: Filtra os elementos do stream.
+- `stream.take(n)`: Retorna os primeiros `n` elementos do stream.
+- `stream.drop(n)`: Retorna o stream sem os primeiros `n` elementos.
 
 ## Implementando um Stream
 
@@ -14,14 +24,53 @@ class Stream
     @block = block
   end
 
-  def each
-    Enumerator.new do |y|
-      loop do
-        y << @block.call
+  def self.from_array(array)
+    new do |yielder|
+      array.each { |elem| yielder << elem }
+    end
+  end
+
+  def each(&block)
+    enumerator = Enumerator.new do |yielder|
+      @block.call(yielder)
+    end
+
+    enumerator.each(&block)
+  end
+
+  def map(&block)
+    Stream.new do |yielder|
+      each { |elem| yielder << block.call(elem) }
+    end
+  end
+
+  def filter(&block)
+    Stream.new do |yielder|
+      each do |elem|
+        yielder << elem if block.call(elem)
       end
     end
   end
+
+  def take(n)
+    results = []
+    each do |elem|
+      results << elem
+      break if results.size >= n
+    end
+    results
+  end
 end
+
+# Usage example:
+
+# Create a stream from an array
+stream = Stream.from_array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10])
+
+# Map over the stream, filter it, and take the first 3 elements
+result = stream.map { |x| x * 2 }.filter { |x| x > 10 }.take(3)
+
+puts result.inspect  # Output: [12, 14, 16]
 ```
 
 ## Referências
