--- a/books/data-structures/2.7.estruturas-de-no.md
+++ b/books/data-structures/2.7.estruturas-de-no.md
@@ -31,6 +31,9 @@ pode ter até dois filhos.
 - `insert(X, T)`: Insere um novo elemento na árvore.
 - `delete(X, T)`: Remove um elemento da árvore.
 
+## Heap (Priority Queues/Binary Heap)
+https://www.cs.usfca.edu/~galles/visualization/Heap.html
+
 ## Árvores de Busca Binária
 
 Uma árvore de busca binária é uma árvore binária onde cada nó tem um valor associado e a propriedade de que o valor de
