add libuv notes

--- a/books/data-structures/roteiros/1.o-curso.md
+++ b/books/data-structures/roteiros/1.o-curso.md
@@ -38,4 +38,15 @@ métodos/funções de certas estruturas como Arrays.
 
 ## Estrutura das aulas
 
+Em cada aula que abordarmos uma estrutura falaremos sobre sua ADT (Abstract Data Type) e implementaremos, quando
+possível, nós mesmos. Essa é uma ótima forma de vermos, mesmo em alto nível, como as estruturas que utilizamos podem ser
+definidas.
+
+Após isso discutimos como que essas estruturas podem ser utilizadas no dia a dia e, dado que não implementaremos tudo de
+uma determinada estrutura, comentaremos quais são, por exemplo, os métodos mais utilizados, os mais importantes.
+
 ### Aulas avançadas
+
+Nas aulas avançadas inciamos uma análise mais aprofundada. Em alguns casos trazemos implementações em C em outros apenas
+discutimos aspectos internos da estrutura com base em algum artigo ou conteúdo como exemplo: arrays vs listas ligadas
+que é um famoso artigo do Bjarne Stroutoup, criador do C++.
