add data structures scripts

--- a/books/data-structures/roteiros/3.arrays.md
+++ b/books/data-structures/roteiros/3.arrays.md
@@ -1,4 +1,65 @@
+# Arrays
+
+## Introducao
+
+Olá, sejam bem-vindos(as) a mais uma aula do curso sobre Estruturas de Dados essenciais. Na aula de hoje conheceremos
+a estrutura de sequência mais fundamental que temos: o Array.
+
+Fundamental no sentido de ser a base para muitas outras estruturas que veremos ao longo do curso. Você provavelmente já
+conhece essa estrutura, pelo menos em um nível mais alto.
+
+Em diferentes linguagens de programação Arrays são chamados por outros nomes, como Listas, Vetores, etc. Mas a ideia
+é a mesma.
+
+## ADT de um Array
+
+Um array é uma sequência de elementos. Cada elemento é acessado por um índice. O índice é um número inteiro que começa
+em 0 e vai até o tamanho do array - 1.
+
+Operações de um array:
+
+- indexação (get_at) - com um índice podemos encontrar um item específico dentro da nossa lista; arrays começam pelo
+    índice zero;
+- exclusão (delete_at) - quando um item não é mais necessário podemos removê-lo;
+- atualização (set_at) - podemos definir o valor que cada índice do array vai conter;
+- busca (find) - podemos buscar um item, por seu valor, em um array;
+
+Além disso, dependendo da linguagem a implementção pode variar. Por exemplo, em C um Array é uma sequência de elementos 
+contíguos na memória. Já em JavaScript (no node) um Array é um objeto.
+
 ## Strings são Arrays
+
+No geral strings vão partilhar as mesmas carcterísticas de um array. Então as operações citadas aqui podem ser aplicadas 
+a strings.
 
 ## O poder de um array ordenado: buscas binárias
 
+Quando temos um array ordenado podemos fazer buscas binárias. A busca binária é uma técnica de busca que é muito mais 
+eficiente que a busca linear. A busca linear é uma técnica de busca que percorre todos os elementos de um array até 
+encontrar o elemento desejado.
+
+A cada iteração dividimos o array o que torna o problema cada vez menor.
+
+É que nem procurar uma palavra em um dicionário. Se você começa pelo meio e a palavra que você procura vem antes da 
+palavra que você está olhando, você vai para a metade anterior. Se vem depois, você vai para a metade posterior.
+
+```javascript
+function binary_search(arr, value) {
+    let start = 0;
+    let end = arr.length - 1;
+
+    while (start <= end) {
+        let middle = Math.floor((start + end) / 2);
+
+        if (arr[middle] === value) {
+            return middle;
+        } else if (arr[middle] < value) {
+            start = middle + 1;
+        } else {
+            end = middle - 1;
+        }
+    }
+
+    return -1;
+}
+```
