add scripts on data structure

--- a/books/data-structures/roteiros/4.arrays-avancado.md
+++ b/books/data-structures/roteiros/4.arrays-avancado.md
@@ -97,6 +97,9 @@ void push_item(my_array *arr, int value) {
     arr->length += 1;
 }
 
+/*
+    Após remover o elemento no indice 'x', é feito o shift. Por isso essa operação em um array dinâmico é O(n)
+*/
 int remove_at(my_array *arr, int index) {
     // TODO: assert this is a valid index
     int removed_elem = arr->items[index];
@@ -164,3 +167,7 @@ Em Ruby, o que temos é um VALUE que representa qualquer coisa. Pois é um ender
 fazer isso alguns metadados de suporte são necessários.
 
 A ideia é parecida com o que fizemos.
+
+## Conclusao
+
+É isso, espero que você tenha gostado. Nos vemos na próxima aula.
