add book scripts

--- a/books/data-structures/roteiros/14.arvores-rotacao-e-balanceamento.md
+++ b/books/data-structures/roteiros/14.arvores-rotacao-e-balanceamento.md
@@ -5,3 +5,21 @@
 Árvores binárias de busca são estruturas de dados muito eficientes para busca, inserção e remoção de elementos. No
 entanto, a eficiência dessas operações depende da altura da árvore. Se a árvore estiver desbalanceada, a altura da
 árvore pode ser igual ao número de elementos, o que torna as operações ineficientes.
+
+Por exemplo, considere a seguinte árvore binária de busca:
+
+```
+  1
+   \
+    2
+     \
+      3
+       \
+        4
+```
+
+Nesta árvore, a altura é igual a 4, que é o número de elementos. Isso significa que a busca, inserção e remoção de
+elementos têm complexidade O(n), onde n é o número de elementos.
+
+Para manter a eficiência das operações de busca, inserção e remoção, é importante manter a árvore balanceada. Uma árvore
+é balanceada se a altura das subárvores esquerda e direita de cada nó difere no máximo em uma unidade.
