--- a/books/data-structures/roteiros/1.o-curso.md
+++ b/books/data-structures/roteiros/1.o-curso.md
@@ -1,6 +1,20 @@
 # Titulos para o curso
 
 - Estruturas de Dados: O Essencial
+- Estruturas de Dados: Antes Difícil, Agora Fácil
+
+# Features vs Benefícios
+
+| Feature | Benefit |
+| ------- | ------- |
+| Aulas avançadas | Entenda como as coisas funcionam por debaixo dos panos e se destaque em entrevistas |
+| Fundamentado em livros e MIT | Aprendizado compatível com o que você veria em uma faculdade, mas com uma inclinação ao mercado de trabalho |
+| Recursos extras | Voce pode usar o grupo de estudos no youtube como complemento |
+
+### Necessidade
+
+Você precisa de curso pois quer se destacar no mercado por não só saber como fazer um código mais limpo, mas também mais
+eficiente. E além de fazer você realmente SABE aquilo.
 
 # Apresentando o curso
 
