--- a/books/data-structures/roteiros/3.arrays.md
+++ b/books/data-structures/roteiros/3.arrays.md
@@ -13,6 +13,8 @@ Em diferentes linguagens de programação Arrays são chamados por outros nomes,
 
 ## ADT de um Array
 
+NOTA: EXPLICAR O ADT COM AUXILIO DE UMA PLANILHA tal qual no grupo de estudos.
+
 Um array é uma sequência de elementos. Cada elemento é acessado por um índice. O índice é um número inteiro que começa
 em 0 e vai até o tamanho do array - 1.
 
@@ -31,6 +33,8 @@ contíguos na memória. Já em JavaScript (no node) um Array é um objeto.
 
 No geral strings vão partilhar as mesmas carcterísticas de um array. Então as operações citadas aqui podem ser aplicadas 
 a strings.
+
+## Exemplos
 
 ## O poder de um array ordenado: buscas binárias
 
@@ -63,3 +67,6 @@ function binary_search(arr, value) {
     return -1;
 }
 ```
+
+## JavaScript V8 Shapes
+
