draft on pwa upgrades

--- a/books/data-structures/roteiros/3.arrays.md
+++ b/books/data-structures/roteiros/3.arrays.md
@@ -68,5 +68,17 @@ function binary_search(arr, value) {
 }
 ```
 
+## Exercícios
+
+O que penso em fazer é entregrar uma função de comparação e um array de valores. A implementacao que o aluno deve fazer
+é a busca binária. Vai usar a função de comparação para saber se o valor que está procurando é maior ou menor que
+o valor do meio.
+
+O teste de validação consiste em contar quantas vezes a função de comparação foi chamada.
+
 ## JavaScript V8 Shapes
 
+- Inicializacao de um array
+    https://v8.dev/blog/elements-kinds
+    https://github.com/nodejs/node/blob/6f946c95b9da75c70e868637de8161bc8d048379/deps/v8/src/objects/objects.cc#L4637
+    https://github.com/nodejs/node/blob/6f946c95b9da75c70e868637de8161bc8d048379/deps/v8/src/heap/factory.cc#L3210
