--- a/books/data-structures/roteiros/4.arrays-avancado.md
+++ b/books/data-structures/roteiros/4.arrays-avancado.md
@@ -70,7 +70,7 @@ slices.
 #include <stdlib.h>
 
 typedef struct {
-    int *items;
+    int *items; // TODO: make this a void pointer to allow for any type
     int capacity;
     int length;
 } my_array;
@@ -171,3 +171,8 @@ A ideia é parecida com o que fizemos.
 ## Conclusao
 
 É isso, espero que você tenha gostado. Nos vemos na próxima aula.
+
+## Excercicios
+
+1. Implemente a funcao insert_at que insere um elemento em um array dinamico em uma determinada posição.
+2. Implemente a funcao remove que remove um elemento de um array dinamico.
