add tropical on rails slides

--- a/books/data-structures/roteiros/4.arrays-avancado.md
+++ b/books/data-structures/roteiros/4.arrays-avancado.md
@@ -176,3 +176,6 @@ A ideia é parecida com o que fizemos.
 
 1. Implemente a funcao insert_at que insere um elemento em um array dinamico em uma determinada posição.
 2. Implemente a funcao remove que remove um elemento de um array dinamico.
+
+
+Ruby alocando objetos: https://github.com/ruby/ruby/blob/8ad5dd79980dbc16753839526190ea5633d31c72/string.c#L990
